# geodesic-gpt-neox

./: .gitignore  CLAUDE.md  README.md  deepy.py  prepare_hf_dataset.py  pretrain_neox.sbatch  pyproject.toml  run_on_compute.sbatch  setup_uv_env.sh  train.py  vscode_tunnel.sh
agent_documentation/: LLM_TRAINING.md
configs/: test_training_loss.yml  test_uv_install.yml
huggingface/: convert_hf_to_neox.sbatch  experiment_hf_mappings.json  upload_and_evaluate_checkpoint.sbatch
tests/: test_prepare_hf_dataset.py  test_uv_install.py
